chapter4/naivealb/security.tf
### Security

resource "aws_security_group" "instance-sg" {
  name = "naive-alb-instance-sg"
  description = "Terraform autogenerated aws security group"
  vpc_id = "${aws_vpc.main.id}"
  
  # HTTP
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = ["${aws_security_group.lb-sg.id}"]
  }

  # SSH
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # out anywhere
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "lb-sg" {
  name = "naive-alb-sg"
  description = "Terraform autogenerated aws security group for load balancer"
  vpc_id = "${aws_vpc.main.id}"

  # HTTP
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # out anywhere
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
